updates to spec

--- a/lib/salt0/spec/salt0.tex
+++ b/lib/salt0/spec/salt0.tex
@@ -1,9 +1,9 @@
 \documentclass{report}
 \usepackage{mathpazo}
 \usepackage{amsthm, mathtools, stmaryrd}
-\usepackage{todonotes} %% has coloring?
-\usepackage{bussproofs}
+\usepackage{xcolor}
 \usepackage{mathpartir}
+\usepackage{geometry}[margins=1in]
 \pagenumbering{gobble}
 \input{../../../macros.tex}
 \title{\texttt{salt0}: Straight Line Programs}
