--- a/lib/salt1/spec/salt1.tex
+++ b/lib/salt1/spec/salt1.tex
@@ -1,8 +1,9 @@
 \documentclass{report}
 \usepackage{mathpazo}
 \usepackage{amsthm, amssymb, mathtools, stmaryrd}
-\usepackage{todonotes} %% has coloring?
-\usepackage{bussproofs}
+\usepackage{xcolor}
+\usepackage{mathpartir}
+\usepackage{geometry}[margins=1in]
 \pagenumbering{gobble}
 \input{../../../macros.tex}
 \title{\texttt{salt1}: Immutable References}
@@ -57,8 +58,8 @@
   \\
   \G &\in \V \mapsto \mathbb S_\T & \text{(contexts)}\\
   \\
-  \G &\ent w : u & \text{(place expressions)} \\
   \G &\ent \mathsf{writable}(x) &\text{(writability)} \\
+  \G &\ent w : u & \text{(place expressions)} \\
   \G &\ent t \approx t &\text{(type compatibility)} \\
   \G &\ent e : t \tne \G &\text{(expressions)} \\
   \G &\ent s \tne \G &\text{(statments)} \\
@@ -66,127 +67,120 @@
 \end{align*}
 \bigskip
 
-\begin{center}
-  \AxiomC{$(x \mapsto t^m) \in \G$}
-  \RightLabel{(var)}
-  \UnaryInfC{$\G \ent x : \langle t \rangle^m$}
-  \DisplayProof
-\end{center}
-
-\begin{center}
-  \AxiomC{$\G \ent w : \langle \brw x \rangle^{m_1}$}
-  \AxiomC{$\G \ent x : \langle t \rangle^{m_2}$}
-  \RightLabel{(deref)}
-  \BinaryInfC{$\G \ent \dref w : \langle t \rangle^{m_2}$}
-  \DisplayProof
-\end{center}
-
-\begin{center}
-  \AxiomC{}
-  \RightLabel{(unit)}
-  \UnaryInfC{$\G \ent \unt : \unt \tne \G$}
-  \DisplayProof
-\end{center}
-
-\begin{center}
-  \AxiomC{$n \in \mathbb Z$}
-  \RightLabel{(int)}
-  \UnaryInfC{$\G \ent n : \intt \tne \G$}
-  \DisplayProof
-\end{center}
-
-\begin{center}
-  \AxiomC{$\G \ent w : \langle t \rangle ^m$}
-  \RightLabel{(place)}
-  \UnaryInfC{$\G \ent w : t \tne \G$}
-  \DisplayProof
-\end{center}
-
-\begin{center}
-  \AxiomC{$\G \ent x : \langle t \rangle^m$}
-  \RightLabel{(ref-var)}
-  \UnaryInfC{$\G \ent \brw x : \brw x \tne \Gamma$}
-  \DisplayProof
-\end{center}
-
-\begin{center}
-  \AxiomC{$\G \ent w : \langle \brw x \rangle^m$}
-  \RightLabel{(ref-drf)}
-  \UnaryInfC{$\G \ent \brw \dref w : \brw x \tne \Gamma$}
-  \DisplayProof
-\end{center}
-
-\begin{center}
-  \AxiomC{}
-  \RightLabel{($\approx$-unit)}
-  \UnaryInfC{$\Gamma \vdash \unitty \approx \unitty$}
-  \DisplayProof
-\end{center}
-
-\begin{center}
-  \AxiomC{}
-  \RightLabel{($\approx$-int)}
-  \UnaryInfC{$\Gamma \vdash \intty \approx \intty$}
-  \DisplayProof
-\end{center}
-
-\begin{center}
-  \AxiomC{$\G \ent x_1 : \langle t_1 \rangle^{m_1}$}
-  \AxiomC{$\G \ent x_2 : \langle t_2 \rangle^{m_2}$}
-  \AxiomC{$\G \ent t_1 \approx t_2$}
-  \RightLabel{($\approx$-ref)}
-  \TrinaryInfC{$\G \ent \brw x_1 \approx \brw x_2$}
-  \DisplayProof
-\end{center}
-
-\begin{prooftree}
-  \AxiomC{$\nexists y . (y \mapsto \brw x) \in \Gamma$}
-  \RightLabel{(writable)}
-  \UnaryInfC{$\writable \Gamma x$}
-\end{prooftree}
-
-\begin{prooftree}
-  \AxiomC{$\G_1 \ent x : \langle t_1 \rangle^{\mathsf{mut}}$}
-  \AxiomC{$\G_1 \ent e : t_2 \tne \G_2$}
-  \AxiomC{$\G_2 \ent t_1 \approx t_2$}
-  \AxiomC{$\writable {\G_2} x$}
-  \RightLabel{(assign)}
-  \QuaternaryInfC{$\G_1 \ent x \eqe e : \unitt \tne \G_2[x \mapsto t_2^{\mathsf{mut}}]$}
-\end{prooftree}
-
-\begin{center}
-  \AxiomC{$\G_1 \ent e : t \tne \G_2$}
-  \AxiomC{$x \not \in \mathsf{dom}(\G_2)$}
-  \RightLabel{(let)}
-  \BinaryInfC{$\G_1 \ent \lete x \eqe e \tne \G_2[x \mapsto t^{\mathsf{imm}}]$}
-  \DisplayProof
-\end{center}
-
-\begin{center}
-  \AxiomC{$\G_1 \ent e : t \tne \G_2$}
-  \AxiomC{$x \not \in \mathsf{dom}(\G_2)$}
-  \RightLabel{(let-mut)}
-  \BinaryInfC{$\G_1 \ent \lete \mute x \eqe e \tne \G_2[x \mapsto t^{\mathsf{mut}}]$}
-  \DisplayProof
-\end{center}
-
-\begin{center}
-  \AxiomC{$\G_1 \ent e : t \tne \G_2$}
-  \RightLabel{(expr-stmt)}
-  \UnaryInfC{$\G_1 \ent e \tne \G_2$}
-  \DisplayProof
-\end{center}
-
-\begin{prooftree}
-  \AxiomC{$\G_1 \ent s \tne \G_2$}
-  \AxiomC{$\G_2 \ent p : t \tne \G_3$}
-  \RightLabel{(prog)}
-  \BinaryInfC{$\G_1 \ent s \ \code{;} \ p : t \tne \G_3$}
-\end{prooftree}
+\begin{mathpar}
+  \inferrule*[right=var]{
+    (x \mapsto t^m) \in \G
+  }{
+    \G \ent x : \langle t \rangle^m
+  }
+  \and
+  \inferrule*[right=deref]{
+    \G \ent w : \langle \brw x \rangle^{m_1}
+    \and
+    \G \ent x : \langle t \rangle^{m_2}
+  }{
+    \G \ent \dref w : \langle t \rangle^{m_2}
+  }
+  \and
+  \inferrule*[right=unit]{
+  }{
+    \G \ent \unt : \unt
+  }
+  \and
+  \inferrule*[right=int]{
+    n \in \Z
+  }{
+    \G \ent n : \intt \tne \G
+  }
+  \and
+  \inferrule*[right=place]{
+    \G \ent w : \langle t \rangle^m
+  }{
+    \G \ent w : t \tne \G
+  }
+  \and
+  \inferrule*[right=refVar]{
+    \G \ent x : \langle t \rangle^m
+  }{
+    \G \ent \brw x : \brw x \tne \G
+  }
+  \and
+  \inferrule*[right=refDeref]{
+    \G \ent w : \langle \brw x \rangle^m
+  }{
+    \G \ent \brw \dref w : \brw x \tne \G
+  }
+  \and
+  \inferrule*[right=$\approx$-unit]{
+  }{
+    \G \ent \unt \approx \unt
+  }
+  \and
+  \inferrule*[right=$\approx$-int]{
+  }{
+    \G \ent \intt \approx \intt
+  }
+  \and
+  \inferrule*[right=$\approx$-ref]{
+    \G \ent x_1 : \langle t_1 \rangle^{m_1}
+    \and
+    \G \ent x_2 : \langle t_2 \rangle^{m_2}
+    \and
+    \G \ent t_1 \approx t_2
+  }{
+    \G \ent \brw x_1 \approx \brw x_2
+  }
+  \and
+  \inferrule*[right=writable]{
+    \nexists y . (y \mapsto \brw x) \in \G
+  }{
+    \writable \G x
+  }
+  \and
+  \inferrule*[right=assign]{
+    \G_1 \ent x : \langle t_1 \rangle^{\mutt}
+    \and
+    \G_1 \ent e : t_2 \tne \G_2
+    \and
+    \G_2 \ent t_1 \approx t_2
+    \and
+    \writable {\G_2} x
+  }{
+    \G_1 \ent x \eqe e : \unt \tne \G_2[x \mapsto t_2^{\mutt}]
+  }
+  \and
+  \inferrule*[right=let]{
+    \G_1 \ent e : t \tne \G_2
+    \and
+    x \not \in \dom(\G_2)
+  }{
+    \G_1 \ent \lete x \eqe e \tne \G_2[x \mapsto t^{\imm}]
+  }
+  \and
+  \inferrule*[right=letMut]{
+    \G_1 \ent e : t \tne \G_2
+    \and
+    x \not \in \dom(\G_2)
+  }{
+    \G_1 \ent \lete \mute x \eqe e \tne \G_2[x \mapsto t^{\mutt}]
+  }
+  \and
+  \inferrule*[right=exprStmt]{
+    \G_1 \ent e : t \tne \G_2
+  }{
+    \G_1 \ent e \tne \G_2
+  }
+  \and
+  \inferrule*[right=prog]{
+    \G_1 \ent s \tne \G_2
+    \and
+    \G_2 \ent p : t \tne \G_3
+  }{
+    \G_1 \ent s \semi p : t \tne \G_3
+  }
+\end{mathpar}
 
 \chapter*{Evaluation}
-
-\newcommand{\config}[2]{\langle \ #1 \ , \ #2 \ \rangle}
 
 \begin{align*}
   \ell &\cceq \ell_x &\text{(locations, $\mathcal L$)} \\
@@ -196,87 +190,84 @@
   \\
   S &\in \Loc \mapsto \Val &\text{(store)} \\
   \\
-  w &\rightsquigarrow \ell &\text{(place locations)} \\
-  \config S e &\Downarrow \config S v &\text{(expressions)} \\
-  \config S s &\Downarrow S &\text{(statements)} \\
-  \config S p &\Downarrow \config S v &\text{(programs)}
+  S &\ent w \rightsquigarrow \ell &\text{(place locations)} \\
+  S &\ent e \evl v \tne S &\text{(expressions)} \\
+  S &\ent s \tne S &\text{(statements)} \\
+  S &\ent p \evl v \tne S &\text{(programs)}
 \end{align*}
 \bigskip
 
-\begin{prooftree}
-  \AxiomC{}
-  \RightLabel{(loc-var)}
-  \UnaryInfC{$x \rightsquigarrow \ell_x$}
-\end{prooftree}
-
-\begin{prooftree}
-  \AxiomC{$w \rightsquigarrow \ell_x$}
-  \AxiomC{$(\ell_x \mapsto \ell_y) \in S$}
-  \RightLabel{(loc-drf)}
-  \BinaryInfC{$\dref w \rightsquigarrow \ell_y$}
-\end{prooftree}
-
-\begin{center}
-  \AxiomC{}
-  \RightLabel{(unit)}
-  \UnaryInfC{$\config S \unitt \evl \config S \unitt$}
-  \DisplayProof
-\end{center}
-
-\begin{center}
-  \AxiomC{$n \in \mathbb Z$}
-  \RightLabel{(int)}
-  \UnaryInfC{$\config S n \evl \config S n$}
-  \DisplayProof
-\end{center}
-
-\begin{center}
-  \AxiomC{$w \rightsquigarrow \ell_x$}
-  \AxiomC{$(\ell_x \mapsto v) \in S$}
-  \RightLabel{(place)}
-  \BinaryInfC{$\config S w \evl \config S {v}$}
-  \DisplayProof
-\end{center}
-
-\begin{prooftree}
-  \AxiomC{$w \rightsquigarrow \ell_x$}
-  \RightLabel{(ref)}
-  \UnaryInfC{$\config S {\brw w} \evl \config S {\ell_x}$}
-\end{prooftree}
-
-\begin{prooftree}
-  \AxiomC{$\ell_x \in \mathsf{dom}(S)$}
-  \AxiomC{$\config {S_1} e \evl \config {S_2} v$}
-  \RightLabel{(assign)}
-  \BinaryInfC{$\config {S_1} {x \eqe e} \evl \config {S_2[\ell_x \mapsto v]} {\unitt}$}
-\end{prooftree}
-
-\begin{center}
-  \AxiomC{$\config {S_1} e \evl \config {S_2} v$}
-  \RightLabel{(let)}
-  \UnaryInfC{$\config {S_1} {\lett x e} \evl S_2[\ell_x \mapsto v]$}
-  \DisplayProof
-\end{center}
-
-\begin{center}
-  \AxiomC{$\config {S_1} e \evl \config {S_2} v$}
-  \RightLabel{(let-mut)}
-  \UnaryInfC{$\config {S_1} {\lete \mute x \eqe e} \evl S_2[\ell_x \mapsto v]$}
-  \DisplayProof
-\end{center}
-
-\begin{center}
-  \AxiomC{$\config {S_1} e \evl \config {S_2} v$}
-  \RightLabel{(expr-stmt)}
-  \UnaryInfC{$\config {S_1} {e} \evl S_2$}
-  \DisplayProof
-\end{center}
-
-\begin{center}
-  \AxiomC{$\config {S_1} {s} \evl S_2$}
-  \AxiomC{$\config {S_2} p \evl \config {S_3} v$}
-  \RightLabel{(prog)}
-  \BinaryInfC{$\config {S_1} {s \ \code{;} \ p} \evl \config {S_3} v$}
-  \DisplayProof
-\end{center}
+\begin{mathpar}
+  \inferrule*[right=locVar]{
+  }{
+    S \ent x \rightsquigarrow \ell_x
+  }
+  \and
+  \inferrule*[right=locDeref]{
+    S \ent w \rightsquigarrow \ell_x
+    \and
+    (\ell_x \mapsto \ell_y) \in S
+  }{
+    S \ent \dref w \rightsquigarrow \ell_y
+  }
+  \and
+  \inferrule*[right=unit]{
+  }{
+    S \ent \unt \evl \unt \tne S
+  }
+  \and
+  \inferrule*[right=int]{
+    n \in \Z
+  }{
+    S \ent n \evl n \tne S
+  }
+  \and
+  \inferrule*[right=place]{
+    S \ent w \rightsquigarrow \ell_x
+    \and
+    (\ell_x \mapsto v) \in S
+  }{
+    S \ent w \evl v \tne S
+  }
+  \and
+  \inferrule*[right=ref]{
+    S \ent w \rightsquigarrow \ell_x
+  }{
+    S \ent \brw w \evl \ell_x \tne S
+  }
+  \and
+  \inferrule*[right=assign]{
+    \ell_x \in \dom(S)
+    \and
+    S_1 \ent e \evl v \tne S_2
+  }{
+    S_1 \ent x \eqe e \evl \unt \tne S_2[\ell_x \mapsto v]
+  }
+  \and
+  \inferrule*[right=let]{
+    S_1 \ent e \evl v \tne S_2
+  }{
+    S_1 \ent \lete x \eqe e \tne S_2[\ell_x \mapsto v]
+  }
+  \and
+  \inferrule*[right=letMut]{
+    S_1 \ent e \evl v \tne S_2
+  }{
+    S_1 \ent \lete \mute x \eqe e \tne S_2[\ell_x \mapsto v]
+  }
+  \and
+  \inferrule*[right=exprStmt]{
+    S_1 \ent e \evl v \tne S_2
+  }{
+    S_1 \ent e \tne S_2
+  }
+  \and
+  \inferrule*[right=prog]{
+    S_1 \ent s \tne S_2
+    \and
+    S_2 \ent p \evl v \tne S_3
+  }{
+    S_1 \ent s \semi p \evl v \tne S_3
+  }
+\end{mathpar}
 \end{document}
