--- a/macros.tex
+++ b/macros.tex
@@ -66,6 +66,7 @@
 \newcommand{\move}[2]{\mathsf{move}(#1, #2)}
 \newcommand{\readable}[2]{#1 \ent \mathsf{readable}(#2)}
 \newcommand{\writable}[2]{#1 \ent \mathsf{writable}(#2)}
+\newcommand{\copyable}[1]{\mathsf{copyable}\left(#1\right)}
 \newcommand{\strike}[2]{\mathsf{strike}(#1, #2)}
 \newcommand{\intt}{\code{i32}}
 \newcommand{\drefe}{\code{*}}
@@ -83,3 +84,6 @@
 \newcommand{\writee}{\mathsf{write}}
 \newcommand{\readd}{\mathsf{read}}
 \newcommand{\copye}[1]{\texttt{copy} \ #1}
+
+\newcommand{\imm}{\mathsf{imm}}
+\newcommand{\mutt}{\mathsf{mut}}
