--- a/macros.tex
+++ b/macros.tex
@@ -15,8 +15,8 @@
 \newcommand{\rep}[1]{\{#1\}}
 \newcommand{\opt}[1]{[#1]}
 
-\newcommand{\boxe}[1]{\code{box} \ #1}
-\newcommand{\boxty}[1]{\code{$\square$} \ #1}
+\newcommand{\boxe}{\code{box} \ }
+\newcommand{\boxt}{\code{$\square$} \ }
 
 \newcommand{\bop}[3]{#2 \ #1 \ #3}
 \newcommand{\uop}[2]{#1 \ #2}
@@ -66,6 +66,7 @@
 \newcommand{\move}[2]{\mathsf{move}(#1, #2)}
 \newcommand{\readable}[2]{#1 \ent \mathsf{readable}(#2)}
 \newcommand{\writable}[2]{#1 \ent \mathsf{writable}(#2)}
+\newcommand{\mutable}[2]{#1 \ent \mathsf{mutable}(#2)}
 \newcommand{\copyable}[1]{\mathsf{copyable}\left(#1\right)}
 \newcommand{\strike}[2]{\mathsf{strike}(#1, #2)}
 \newcommand{\intt}{\code{i32}}
@@ -80,7 +81,6 @@
 \newcommand{\mute}{\code{mut} \ }
 \newcommand{\evl}{\Downarrow}
 \newcommand{\loc}[2]{\mathsf{loc}(#1, #2)}
-\newcommand{\mutable}[2]{#1 \ent \mathsf{mutable}(#2)}
 \newcommand{\writee}{\mathsf{write}}
 \newcommand{\readd}{\mathsf{read}}
 \newcommand{\copye}[1]{\texttt{copy} \ #1}
